# Lemin

./: #ewrwerwer  CMakeLists.txt  Makefile  TEST.txt  ants.c  auxiliary.c  clean.c  clean_rooms.c  error_check.c  flags.c  get_ways.c  get_ways_dop.c  get_ways_dop1.c  lem-in  lem_in  lem_in.h  main.c  parse_links.c  parse_links_dop.c  parse_rooms.c  parse_rooms_dop.c  parsing.c  print_ways_and_ants.c  test
includes/: lem_in.h
libft/: Makefile  free_str_return_int.c  ft_are_nums.c  ft_atoi.c  ft_check_iarr.c  ft_convert_base.c  ft_multjoinfr.c  ft_pmult_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_pwrbase.c  ft_setnum.c  ft_split_wsps.c  ft_strcmp.c  ft_strdup.c  ft_strpos.c  gnl.c  lgnl.c  libft.h
src/: ants.c  auxiliary.c  clean.c  clean_rooms.c  error_check.c  flags.c  get_ways.c  get_ways_dop.c  get_ways_dop1.c  main.c  parse_links.c  parse_links_dop.c  parse_rooms.c  parse_rooms_dop.c  parsing.c  print_ways_and_ants.c
testing_files/: error_input_cases  invalid1  invalid10  invalid11  invalid12  invalid13  invalid14  invalid15  invalid16  invalid17  invalid18  invalid19  invalid2  invalid3  invalid5  invalid6  invalid9  valid1  valid10  valid11  valid12  valid2  valid5  valid6  valid7  valid8  valid9
